--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5310,3 +5310,549 @@ table.data td, table.data-nav-tray td, table.data th, table.data-nav-tray th {
      z-index: 100;
      top: 0;
     */
+
+.content-wrap {
+    max-width: 1020px;
+    margin: 0px auto;
+    padding: 15px;
+}
+
+ul.chooser {
+    margin: 0;
+    padding: 0;
+    list-style: none
+}
+
+ul.chooser div.date-break {
+    color: #7f8c8d;
+    padding: 10px 0 5px 0;
+    font-size: 1.05em
+}
+
+ul.chooser div.date-break i {
+    font-size: 1.1em;
+    margin-right: 5px;
+    margin-left: 5px
+}
+
+ul.chooser li {
+    margin: 0 0 10px 0;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background: #fff;
+    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    cursor: pointer;
+    -webkit-transition: all .1s ease;
+    -moz-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease
+}
+
+ul.chooser li:last-child {
+    margin-bottom: 0
+}
+
+ul.chooser li.hidden {
+
+}
+
+ul.chooser li i {
+    font-size: 2.5em
+}
+
+ul.chooser li i.fa-angle-right {
+    color: #7f8c8d
+}
+
+@media (min-width: 1024px) {
+    ul.chooser li:hover {
+        background: #95a5a6;
+        color: #fff
+    }
+
+    ul.chooser li:hover i {
+        color: #fff
+    }
+}
+
+ul.chooser li .item-inner {
+    text-align: left
+}
+
+ul.chooser li .item-inner img {
+    width: 36px;
+    height: 36px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px
+}
+
+ul.chooser li .item-inner .icon-holder {
+    width: 36px;
+    overflow-x: hidden;
+    float: left;
+    margin-right: -100%
+}
+
+ul.chooser li .item-inner .text {
+    float: left;
+    margin-left: 51px
+}
+
+ul.chooser li .item-inner .text .title {
+    font-size: 1.1em;
+    margin: 0 0 2px 0
+}
+
+ul.chooser li .item-inner .text .description {
+    font-size: .9em
+}
+
+ul.chooser li .item-inner .text.no-title {
+    line-height: 35px
+}
+
+ul.chooser li.chooser-button {
+    background: 0;
+    padding: 0 0 10px 0
+}
+
+ul.chooser li.chooser-button i.fa-angle-right {
+    display: none
+}
+
+ul.chooser li.chooser-button .item-inner {
+    background: #2980b9;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    width: 100%;
+    color: #fff;
+    padding: 5px 10px 5px 10px
+}
+
+ul.chooser li.chooser-button .item-inner:hover {
+    background: #3498db
+}
+
+ul.chooser.on-white li {
+    background: #ecf0f1
+}
+
+@media (min-width: 1024px) {
+    ul.chooser.on-white li:hover {
+        background: #f3f5f7;
+        color: #0f161c
+    }
+
+    ul.chooser.on-white li:hover i {
+        color: #0f161c
+    }
+}
+
+ul.chooser.mobile-actions li {
+    margin: 1px 0 0 0;
+    position: relative
+}
+
+ul.chooser.side-chooser li {
+    margin: 1px 0 0 0
+}
+
+ul.chooser.side-chooser li i {
+    font-size: 1.7em
+}
+
+ul.chooser.side-chooser li .item-inner .icon-holder {
+    width: 33px
+}
+
+ul.chooser.side-chooser li .item-inner .text {
+    margin-left: 40px
+}
+
+ul.chooser.side-chooser li .item-inner .text.no-title {
+    line-height: 25px
+}
+
+ul.chooser.side-chooser li.active {
+    background-color: #ccc;
+}
+
+ul.chooser.side-chooser li.active:hover {
+    color: #fff
+}
+
+ul.chooser.side-chooser.hide-mobile {
+}
+
+.form_main {
+    width: 100%;
+}
+
+.form_main h4 {
+    font-family: roboto;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 15px;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.heading {
+    border-bottom: 1px solid #fcab0e;
+    padding-bottom: 9px;
+    position: relative;
+}
+
+.heading span {
+    background: #9e6600 none repeat scroll 0 0;
+    bottom: -2px;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 75px;
+}
+
+.form {
+    border-radius: 7px;
+    padding: 6px;
+}
+
+.txt[type="text"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.txt_3[type="text"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.txt2[type="submit"] {
+    background: #242424 none repeat scroll 0 0;
+    border: 1px solid #4f5c04;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 35px;
+    margin: 10px 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 30%;
+}
+
+.txt2:hover {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    color: #5793ef;
+    transition: all 0.5s ease 0s;
+}
+
+.txt[type="text"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.txt_3[type="text"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.txt2[type="submit"] {
+    background: #242424 none repeat scroll 0 0;
+    border: 1px solid #4f5c04;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 35px;
+    margin: 10px 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 30%;
+}
+
+.txt2:hover {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    color: #5793ef;
+    transition: all 0.5s ease 0s;
+}
+
+.txt[type="password"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.txt_3[type="password"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.uploader {
+    border: 2px dotted #A5A5C7;
+    width: 100%;
+    color: #92AAB0;
+    text-align: center;
+    vertical-align: middle;
+    padding: 40px 0px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    cursor: default;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.uploader-active {
+    border-color: #0B85A1;
+}
+
+.uploader div.or {
+    font-size: 14px;
+    font-weight: bold;
+    color: #C0C0C0;
+    padding: 10px;
+}
+
+.uploader div.browser label {
+    background-color: #5a7bc2;
+    padding: 5px 15px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 2px;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    width: 300px;
+    margin: 20px auto 0px auto;
+
+    box-shadow: 2px 2px 2px #888888;
+}
+
+.uploader div.browser span {
+    cursor: pointer;
+}
+
+.uploader div.browser input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: solid transparent;
+    border-width: 0 0 100px 200px;
+    opacity: .0;
+    filter: alpha(opacity=0);
+    -o-transform: translate(250px, -50px) scale(1);
+    -moz-transform: translate(-300px, 0) scale(4);
+    direction: ltr;
+    cursor: pointer;
+}
+
+.uploader div.browser label:hover {
+    background-color: #427fed;
+}
+
+/*
+ * File list
+ */
+#fileList {
+    float: right;
+    width: 330px;
+    height: 196px;
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+    color: gray;
+
+    font-size: 12px;
+
+    overflow: auto;
+}
+
+#fileList .file {
+    width: 290px;
+    margin-bottom: 15px;
+}
+
+#fileList .info {
+    width: 290px;
+    height: 26px;
+    display: block;
+    overflow: hidden;
+
+    line-height: 13px;
+}
+
+#fileList .filename {
+    font-weight: bold;
+}
+
+#fileList .bar {
+    border: solid 1px #C0C0C0;
+    height: 12px;
+    margin-top: 5px;
+    padding: 1px;
+    width: 290px;
+}
+
+#fileList .progress {
+    height: 12px;
+    background-color: #00CCFF;
+}
+
+#fileList span.success {
+    color: #009900;
+}
+
+#fileList span.error {
+    color: #990000;
+}
+
+.tab {
+    text-decoration: none !important;
+    text-underline-mode: none;
+}
+
+/**ADDITIONAL STYLES**/
+.page {
+    padding-bottom: 100px
+}
+
+@media (min-width: 1024px) {
+    .page {
+        padding-bottom: 0;
+        width: 970px;
+        text-align: left;
+        margin: 0 auto;
+        display: inline-block;
+        margin-top: 25px;
+        margin-bottom: 150px
+    }
+}
+
+@media (min-width: 1280px) {
+    .page {
+        margin-right: 180px
+    }
+}
+
+@media (min-width: 1366px) {
+    .page {
+        margin-right: 300px
+    }
+}
+
+@media (min-width: 1440px) {
+    .page {
+        margin-right: 320px
+    }
+}
+
+@media (min-width: 1024px) {
+    .page.no-right-col {
+        margin-right: 0
+    }
+}
+
+.page h1, .page h2, .page h3 {
+    margin: 0 0 10px 0;
+    font-weight: 300;
+    color: #c0392b
+}
+
+.page h4 {
+    margin: 0 0 5px 0;
+    color: #c0392b;
+    font-weight: bold
+}
+
+form.basic input[type=text], form.basic input[type=password], form.basic input[type=email], form.basic input[type=number], form.basic input[type=search], form.basic input[type=file], form.basic input[type=tel], form.basic input[type=range], form.basic input[type=url], form.basic textarea {
+    font-size: 1.1em;
+    padding: 10px;
+    display: block;
+    width: 100%;
+    min-height: 40px;
+    border: 1px solid #c3d7d9;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px
+}
+
+form.basic textarea {
+    font-size: 1em;
+    min-height: 100px
+}
+
+form.basic .textarea-counter {
+    line-height: 25px;
+    font-size: .9em;
+    width: 100%;
+    text-align: center;
+    color: #7f8c8d
+}
+
+form.basic input[type=text]:focus, form.basic input[type=password]:focus, form.basic input[type=email]:focus, form.basic input[type=number]:focus, form.basic input[type=search]:focus, form.basic input[type=tel]:focus, form.basic input[type=range]:focus, form.basic input[type=url]:focus {
+    outline: 0;
+    padding: 9px;
+    border: 2px solid #3498db
+}
+
+form.basic input[type=text]:focus:invalid, form.basic input[type=password]:focus:invalid, form.basic input[type=email]:focus:invalid, form.basic input[type=number]:focus:invalid, form.basic input[type=search]:focus:invalid, form.basic input[type=tel]:focus:invalid, form.basic input[type=range]:focus:invalid, form.basic input[type=url]:focus:invalid {
+    border: 2px solid #e74c3c
+}
+
+form.basic input[type=text]:focus:valid, form.basic input[type=password]:focus:valid, form.basic input[type=email]:focus:valid, form.basic input[type=number]:focus:valid, form.basic input[type=search]:focus:valid, form.basic input[type=tel]:focus:valid, form.basic input[type=range]:focus:valid, form.basic input[type=url]:focus:valid {
+    border: 2px solid #2ecc71
+}
+
+form.basic input[type=checkbox], form.basic input[type=radio] {
+    margin: 0 10px 0 0
+}
+
+form.basic select {
+    padding: 10px;
+    font-size: 1.1em;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-appearance: none;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #c3d7d9;
+    outline: 0;
+    /*background-image: url("https://superbru-cdn.scdn3.secure.raxcdn.com/coreimages/structure/select_down_with_right_pad2.png");
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: 30px 12px*/
+}
+
+form.basic select:focus {
+    padding: 9px;
+    border: 2px solid #3498db
+}
