--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
     color: black;
-    background: url('../imgs/bg.jpg') no-repeat top center fixed;
+    background: url('imgs/bg/bg.jpg') no-repeat top center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
