--- a/resources/css/sb-admin.css
+++ b/resources/css/sb-admin.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-sb-admin/blob/master/LICENSE)
  */
 body {
-    background: #292b2c;
+    background: grey;
 }
 
 body.fixed-nav {
@@ -36,7 +36,7 @@ body.fixed-nav {
     width: 50px;
     height: 50px;
     text-align: center;
-    color: white;
+    color: black;
     background: rgba(41, 43, 44, 0.5);
 }
 
