--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,20 @@ body {
     -webkit-border-radius: 4px;
 }
 
+.numberSpan {
+    background-color: #000;
+    color: #fff;
+    font-family: Courier, serif;
+    font-size: 110%;
+    padding: 0px 3px 0px 3px;
+    text-align: center;
+    margin-right: 5px;
+    border: 1px solid #333;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
 
 .fa-check{
     color: green;
@@ -779,8 +793,6 @@ SIDEBAR NAVBAR WIHT ICONS
     display: flex;
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
-    -webkit-box-align: flex-start;
-    -ms-flex-align: flex-start;
     -webkit-align-items: flex-start;
     align-items: flex-start;
     margin: 4px 0 0 15px
@@ -4898,14 +4910,14 @@ table.past-results .lozenge, table.past-results table.pick-compare td .points .l
     width: 30px
 }
 
-.fa {
+/*.fa {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
+}*/
 
 img {
     vertical-align: bottom;
